--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     image: 'postgres:latest'
   redis:  
     image: 'redis:latest'
+  nginx:
+    restart: always
+    build: 
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3050:80'    
   api:
     build:
       dockerfile: Dockerfile.dev
@@ -33,3 +40,5 @@ services:
     volumes: 
       - /app/node_modules
       - ./worker:/app
+
+  
